# template

./: .gitignore  AGENTS.md  README.md  SKILLS.md  alembic.ini  build.py  eslint.config.js  main.py  microservice.service  package-lock.json  package.json  pyproject.toml  recaller.service  setup.py  tsconfig.json
migrations/: env.py
scripts/: copy-frontend-assets.mjs
src/backend/: agent_tools_index.py  app.py  database.py
src/frontend/: app.ts  index.html  style.css
tests/: test_agent_tools.py  test_favicon.py  test_health.py  test_main.py  test_setup.py
