[project]
name = "template"
version = "0.1.0"
description = "Project template for AI-assisted coding with FastAPI, TypeScript, SQLite, and Alembic."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.2",
    "fastapi>=0.115.13",
    "sqlalchemy>=2.0.41",
    "uvicorn[standard]>=0.34.3",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
